--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
+                <img id="logo" src="imagenes/dragon.png">
                 Hyperblog 
                 <span id="tagline">Tu blog de cabecera</span>
                 </div>
@@ -14,7 +15,7 @@
         <h1>Este es el titulo atractivo e interesante del post</h1>
         <p>y este es el parrafo del inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
         <p>
-            Los blogs son la mejor forma de compartir información y tus ideas. Mucho más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres... por ahora.</p>
+        Los blogs son la mejor forma de compartir información y tus ideas. Mucho más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres... por ahora.</p>
             <p>Suscribete y dale like</p>
             </div>
         </div>
