--- a/blogpost.html
+++ b/blogpost.html
@@ -3,6 +3,7 @@
         <title>Bienvenido a Hyperblog 2.0</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
+    <meta charset=“UTF-8”>
     <body>
         <div id="container">
             <div id="cabecera">
@@ -10,13 +11,17 @@
                 <span id="tagline">Tu blog de cabecera</span>
                 </div>
             <div id="post">
-        <h1>Este es el titulo atractivo e interesante del post</h1>
+        <h1>Este es el título atractivo e interesante del post</h1>
         <p>y este es el parrafo del inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
         <p>
             Los blogs son la mejor forma de compartir información y tus ideas. Mucho más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres... por ahora.</p>
             <p>Suscribete y dale like</p>
             </div>
+            <div id="footer">
+                Hecho con amor en Platzi ♥️
+            </div>
         </div>
+        
     </body>
 
 </html>
