--- a/blogpost.html
+++ b/blogpost.html
@@ -14,7 +14,7 @@
             <div id="post">
         <h1>Este es el título atractivo e interesante del post</h1>
         <p>Y este es el párrafo del inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p>
-        <p><img src="https://imgur.com/a/a6p4LrF" width="100%" alt=""></p>
+        <p><img src="https://imgur.com/a/a6p4LrF.jpg" width="100%" alt=""></p>
         <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres... por ahora.</p>
             <p>Suscribete y dale like</p>
             </div>
